# mental-navigation

./: README.md  pyproject.toml
src/mental_navigation/Bayesianmodels/: Bayesian_true_data.ipynb  Bayesianmodels.ipynb  Fig9_extended_data.ipynb  Identifiability_test.py  Identifyability.py  Model_fit.ipynb  counting_sim_2.csv  timing_sim_2.csv
src/mental_navigation/CAN/: CAN_network.py  CAN_notebook.ipynb  CAN_notebook_updated.ipynb  CAN_simulator.py  CAN_technical_explanations.ipynb  SD_variance_FF.ipynb  Source-Data-Fig4.xlsx  lmgc_plast_model.py  model_units.py
src/mental_navigation/Fig1/: Data_Fig1.xlsx  Fig1b.ipynb  Fig1c.ipynb  Fig1e.ipynb
src/mental_navigation/Fig2/: Fig2a.ipynb  Fig2c.ipynb
